--- a/TaskManagementApp.UI/src/app/components/dashboard.component.css
+++ b/TaskManagementApp.UI/src/app/components/dashboard.component.css
@@ -1,6 +1,22 @@
 .container {
     text-align: left;
   }
+
+  .header {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  
+  .title {
+    font-size: 2.5rem;
+    font-weight: bold;
+    color: #007bff; /* Primary color */
+  }
+  
+  .subtitle {
+    font-size: 1.2rem;
+    color: #6c757d; /* Secondary color */
+  }
   
   .user-info {
     display: flex;
@@ -36,6 +52,10 @@
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
+  }
+
+  .card-header {
+    font-weight: bold;
   }
   
   .high-priority-card {
@@ -78,6 +98,11 @@
   .task-actions i {
     cursor: pointer;
   }
+
+  .task-due-time {
+    font-size: 0.8rem;
+    color: #6c757d;
+  }
   
   .task-details {
     padding: 10px 0;
@@ -95,10 +120,6 @@
     background-color: #90caf9; /* Slightly darker than the low-priority-card background */
   }
 
-  .search-input {
-    width: 100%;
-  }
-  
   .fontsearch { 
     position: relative; 
   } 
@@ -109,6 +130,22 @@
     top: 10px; 
     color: #007bff; 
   } 
+
+  .fontsearch .search-container {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+  }
+  
+  .fontsearch .search-input {
+    width: 75%;
+    margin-right: 5px;
+  }
+  
+  .fontsearch .search-icon {
+    cursor: pointer;
+    color: #6c757d;
+  }
 
   .fontdatenav { 
     position: relative; 
